# pyWinCTRL

./: LICENSE  README.md  pyproject.toml
pywinctrl/: __init__.py  winctrl.py
scripts/undemand_attention/: undemand_attention.py
scripts/undemand_attention_for_chrome_windows/: undemand_attention_for_chrome_windows.py
